# opengl-init

./: .gitmodules
a1/: CMakeLists.txt  Makefile  main.cpp
